[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/items/enemies/scripts/orb.gd" id="1_6h6eh"]
[ext_resource type="Script" path="res://src/utilities/scripts/on_room_enter_notifier_2d.gd" id="2_w65hc"]

[node name="Orb" type="Node2D"]
script = ExtResource("1_6h6eh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0

[node name="RkOnRoomEnterNotifier2D" type="Node2D" parent="."]
script = ExtResource("2_w65hc")

[connection signal="room_enter" from="RkOnRoomEnterNotifier2D" to="." method="_on_rk_on_room_enter_notifier_2d_room_enter"]
[connection signal="room_leave" from="RkOnRoomEnterNotifier2D" to="." method="_on_rk_on_room_enter_notifier_2d_room_leave"]
